# dku_robotarm

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dku_robotarm/lib/dku_robotarm/: AngleSetter.py  Interface_test.py  JointStatePublisher.py  MarkerArrayPublisher.py
install/dku_robotarm/lib/dku_robotarm/gpt_api/: DataPreprocessing.py  Transfersound.py
install/dku_robotarm/share/ament_index/resource_index/parent_prefix_path/: dku_robotarm
install/dku_robotarm/share/dku_robotarm/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dku_robotarm/share/dku_robotarm/meshes/: main_gripper2.stl  sub_gripper2.stl
launch/: control.launch.py  display.launch.py
log/: latest_build
meshes/: base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  main_gripper1.stl  sub_gripper1.stl
rviz/: dku_robotarm.rviz  robotarm.rviz
src/: AngleSetter.py  ApplicationRobotarm.py  Interface.py  Interface_gui.py  Interface_test.py  Interface_w.py  JointStatePublisher.py  MarkPublisher.py  MarkerPublisher.py  test.py
src/Interface_gui/: robot_controller_app.py  robot_controller_node.py
src/camera/: Camera.py  test.py
src/control/: AngleSetter.py  AngleSetter_w.py  ApplicationRobotarm.py  dumE_test.py
src/display/: JointStatePublisher.py  MarkerArrayPublisher.py
src/gpt_api/: ChatHandler.py  DataPreprocessing.py  RobotAction.py  Transfersound.py
src/npl/: CommandProcessing.py  robot_commands.yaml
urdf/: dku_robotarm.urdf  robotarm.urdf
