<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dku_robotarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="retta@todo.todo">retta</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>rclpy</depend>  <!-- rclpy 추가 -->
  <depend>sensor_msgs</depend> <!-- sensor_msgs 추가 -->
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>python3-ikpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
